# hyprland-virtual-desktops

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  default.nix  flake.nix  hyprload.toml  hyprpm.toml
.github/actions/setup_base/: action.yml
.github/workflows/: ci.yaml  format.yaml
include/: FocusMemory.hpp  VirtualDesk.hpp  VirtualDeskManager.hpp  globals.hpp  layout_utils.hpp  sticky_apps.hpp  utils.cpp  utils.hpp
src/: VirtualDesk.cpp  VirtualDeskManager.cpp  main.cpp  sticky_apps.cpp  utils.cpp
tests/: focus_memory_test.cpp  layout_utils_property_test.cpp  test_helpers.hpp  utils_test.cpp
